--- a/about.html
+++ b/about.html
@@ -40,13 +40,35 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
                         </li>
-                        
                     </ul>
                 </div>
             </div>
         </nav>
-        <div>
-
+        <div class="card mt-5 ms-auto" style="width: 45rem">
+            <div class="card-body">
+                <p class="card-text">
+                    Welcome to JssN movie list, your ultimate destination for
+                    movie enthusiasts! We are dedicated to providing you with
+                    the latest information on movies, reviews, trailers, and
+                    everything related to the world of cinema. 
+                    <br>
+                    Our goal is to
+                    create a space where movie lovers can explore new releases,
+                    rediscover old classics, and stay updated on the most
+                    anticipated films of the year. 
+                    <br>
+                    Whether you're a fan of
+                    action-packed blockbusters, thought-provoking indie films,
+                    or heartwarming family movies, we've got something for
+                    everyone. At [Nama Website], we believe that movies are more
+                    than just entertainment; they are stories that inspire,
+                    challenge, and bring people together. 
+                    <br>
+                    Our team of passionate
+                    movie buffs works tirelessly to curate the best content,
+                    making sure you never miss out on any cinematic gem.
+                </p>
+            </div>
         </div>
 
         <script
