--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,30 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
                         </li>
-                        
                     </ul>
                 </div>
             </div>
         </nav>
+
+        <div class="input-group flex-nowrap mt-5">
+            <span class="input-group-text" id="addon-wrapping">@</span>
+            <input
+                type="text"
+                class="form-control"
+                placeholder="Username"
+                aria-label="Username"
+                aria-describedby="addon-wrapping" />
+        </div>
+        <div class="input-group flex-nowrap my-3">
+            <span class="input-group-text" id="addon-wrapping">?</span>
+            <input
+                type="password"
+                class="form-control"
+                placeholder="Password"
+                aria-label="Password"
+                aria-describedby="addon-wrapping" />
+        </div>
+        <button type="button" class="btn btn-primary ">Masuk</button>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
